--- a/src/theme/app.core.scss
+++ b/src/theme/app.core.scss
@@ -30,6 +30,7 @@
 
 @import "../pages/tab/tab";
 @import "../pages/login/login";
+@import "../pages/login/smsVerification/smsVerification";
 @import "../pages/guide/guide";
 
 @import "../pages/password/changePassword/changePassword";
@@ -46,4 +47,6 @@
 @import "../pages/setting/userApplication/follow/follow";
 @import "../pages/setting/userApplication/operationLog/operationLog";
 @import "../pages/setting/userApplication/return/return";
+@import "../pages/setting/userApplication/modal/popovers.indexPage";
+
 
