--- a/src/pages/setting/userApplication/operationLog/operationLog.scss
+++ b/src/pages/setting/userApplication/operationLog/operationLog.scss
@@ -1,2 +1,29 @@
 .operationLog {
+  .contentPadding {
+    padding: 0 10px;
+    .timeStyle {
+      font-family: DINPro-Regular;
+      font-size: 14px;
+      color: #000000;
+      line-height: 14px;
+      padding-left: 20px;
+    }
+    .contentDetail {
+      font-family: PingFangSC-Light;
+      font-size: 14px;
+      color: #000000;
+      letter-spacing: 0;
+      padding-left: 20px;
+    }
+    .quan{
+      height: 8px;
+      width: 8px;
+      border-radius: 50%;
+      background: #888888;
+      display: block;
+      top: 20px;
+      left: 10px;
+      position: relative;
+    }
+  }
 }
