--- a/src/pages/setting/userApplication/return/return.scss
+++ b/src/pages/setting/userApplication/return/return.scss
@@ -1,2 +1,51 @@
 .return {
+  .contentPadding {
+    padding: 0 10px 10px 10px;
+  }
+  .list {
+    .item-divider {
+      margin: 10px 0 0 0;
+      height: 46px;
+      line-height: 46px;
+      padding: 0 15px;
+      background: #ffffff;
+      font-family: PingFangSC-Medium;
+      font-size: 14px;
+      color: #000000;
+      letter-spacing: -0.34px;
+      .selectClickTip {
+        font-family: PingFangSC-Light;
+        font-size: 14px;
+        color: #888888;
+        letter-spacing: 0;
+      }
+    }
+    .item {
+      border: 0;
+      textarea {
+        background: #FDFDFD;
+        border: 1px solid #E8E8E8;
+        border-radius: 4px;
+        padding: 5px;
+        width: 100%;
+        height: 90px
+      }
+    }
+  }
+  .item-complex .item-content, .item-radio .item-content {
+    padding: 5px 49px 5px 16px;
+    font-family: PingFangSC-Light;
+    font-size: 14px;
+    color: #000000;
+    letter-spacing: 0;
+    line-height: 23px;
+  }
+  .item-radio .radio-icon {
+    font-size: 12px;
+    top: -3px;
+  }
+  input[disabled], input[readonly]:not(.cloned-text-input), select[disabled], select[readonly], textarea[disabled], textarea[readonly]:not(.cloned-text-input) {
+    background-color: #FFFFFF;
+    cursor: not-allowed;
+  }
 }
