--- a/src/pages/setting/userApplication/distribution/distribution.scss
+++ b/src/pages/setting/userApplication/distribution/distribution.scss
@@ -1,3 +1,10 @@
+.platform-ios .contentMargin{
+  margin-top: 64px;
+}
+.platform-android .contentMargin{
+  margin-top: 44px;
+}
+
 .distribution {
   .contentPadding {
     padding: 0 10px;
