--- a/src/pages/setting/messageInfo/messageDetail/messageDetail.scss
+++ b/src/pages/setting/messageInfo/messageDetail/messageDetail.scss
@@ -25,7 +25,7 @@
     font-size: 12px;
     color: #AAAAAA;
     text-align: right;
-    line-height: 14px;
+    //line-height: 14px;
   }
   .contentAll {
     width: 100%;
