--- a/src/pages/setting/setting.scss
+++ b/src/pages/setting/setting.scss
@@ -55,10 +55,14 @@
     font-size: 30px;
   }
   .hongDian {
-    width: 24px;
+    width: 20px;
+    text-align: center;
     position: relative;
     top: -90px;
     left: 36px;
+    padding: 0;
+    font-size: 8px;
+    transform: scale(0.833333);
   }
   .bigTitle {
     font-size: 15px;
