--- a/src/pages/indexPage/indexPage.scss
+++ b/src/pages/indexPage/indexPage.scss
@@ -254,4 +254,14 @@
     bottom: 20px;
     width: 100%;
   }
+  .auto-height{
+    position: absolute;
+    right: 10px;
+    top: 25px;
+    img{
+      width: 7px;
+      height: 10px;
+      margin-left: 4px;
+    }
+  }
 }
