--- a/src/pages/setting/userApplication/userApplicationList.scss
+++ b/src/pages/setting/userApplication/userApplicationList.scss
@@ -15,6 +15,7 @@
     padding: 10px;
   }
   .rowStyle {
+    overflow: scroll;
     text-align: center;
     background: white;
     height: 44px;
@@ -243,5 +244,10 @@
     position: absolute;
     top: 26px;
     left: 10px;
+  }
+  .statistics-time {
+    font-size: 12px;
+    color: #888888;
+    text-align: center;
   }
 }
